# mathparse

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/: advanced.rst  conf.py  examples.rst  index.rst  languages.rst  postfix.rst  quickstart.rst  setup.rst  utils.rst
docs/_ext/: canonical.py  github.py
docs/_static/: style.css
docs/_templates/: layout.html
mathparse/: __init__.py  mathparse.py  mathwords.py
tests/: test_binary_operations.py  test_complex_statements.py  test_language_support.py  test_operations.py  test_prefix_unary_operations.py  test_replace_word_tokens.py  test_simplified_chinese.py  test_unary_operations.py  test_utils.py
