[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=[
    "mathparse",
]

[tool.setuptools.dynamic]
version = {attr = "mathparse.__version__"}

[project]
name = "mathparse"
requires-python = ">=3.9,<3.14"
urls = { Documentation = "https://mathparse.chatterbot.us", Repository = "https://github.com/gunthercox/mathparse", Changelog = "https://github.com/gunthercox/mathparse/releases" }
authors = [
  {name = "Gunther Cox"},
]
license = "MIT"
description = "mathparse is a library for solving mathematical equations contained in strings"
readme = "README.md"
dynamic = ["version"]
keywords = [
    "mathparse",
    "mathematics",
    "math",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python",
]

[project.optional-dependencies]
test = [
    "flake8",
    "sphinx>=7.4,<9.0"
]
